data/derived/fa15/progs/unify/prog3460.ml.out
Characters 157-172:
  removeZero (add (padZero l1 l2));;
                  ^^^^^^^^^^^^^^^
Error: This expression has type int list * int list
       but an expression was expected of type ('a -> int list list) * 'a
       Type int list is not compatible with type 'a -> int list list 
